<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>mx.randalf</groupId>
    <artifactId>RandalfGestioneSocket</artifactId>
    <version>1.0.0</version>
  </parent>
  <groupId>mx.randalf.socket</groupId>
  <artifactId>RandalfSocket</artifactId>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.9</maven.compiler.source>
		<maven.compiler.target>1.9</maven.compiler.target>
	</properties>
	<distributionManagement>
		<repository>
			<id>mvn-bncf</id>
			<name>Maven BNCF-releases</name>
			<url>http://maven.bncf.firenze.sbn.it/artifactory/libs-release-local</url>
		</repository>
	</distributionManagement>
	<repositories>
		<repository>
			<id>bncf</id>
			<url>http://maven.bncf.firenze.sbn.it/artifactory/libs-release</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
  <dependencies>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
    </dependency>
  </dependencies>
  <version>3.0.0</version>
</project>